SQUAD-9-313 Adding UpdateClientModel to swagger.json to validate updating values
